# IoT-SGX

./: README.md
iot/: Android.mk  CMakeLists.txt  README.md  Readme.txt  sample_device_info.json
iot/host/: Makefile  device_manager.c  device_switch.c  main.c  utils.c
iot/host/include/: device_manager.h  device_switch.h  utils.h
iot/ta/: Android.mk  Makefile  cJSON_TA.c  device_manager_TA.c  device_motion_sensor_TA.c  device_switch_TA.c  device_temp_sensor_TA.c  main_TA.c  parser_TA.c  sub.mk  user_ta_header_defines.h  utils_TA.c
iot/ta/include/: device_manager_TA.h  device_motion_sensor_TA.h  device_switch_TA.h  device_temp_sensor_TA.h  main_TA.h  parser_TA.h  utils_TA.h
sgx/: CMakeLists.txt  Makefile  README.md  Readme.txt
sgx/App/: ._Edger8rSyntax  App.cpp  App.h  ErrorSupport.cpp  ErrorSupport.h  JSONParser.cpp  JSONParser.h  MongoManager.cpp  MongoManager.h  SocketManager.cpp  SocketManager.h  utils.cpp  utils.h
sgx/App/Edger8rSyntax/: ._Types.cpp
sgx/Enclave/: Constants.h  ControlFlowManager.cpp  ControlFlowManager.h  Enclave.cpp  Enclave.edl  Enclave.h  EnclaveDatabaseManager.cpp  EnclaveDatabaseManager.h  EnclaveHelper.cpp  EnclaveHelper.h  EnclaveManager.cpp  EnclaveManager.h  ObliviousOperationManager.cpp  ObliviousOperationManager.h  RuleConflictDetectionManager.cpp  RuleConflictDetectionManager.h  RuleManager.cpp  RuleManager.h  RuleParser.cpp  RuleParser.h  analytics_utils.cpp  analytics_utils.h  cJSON.cpp
sgx/Include/: user_types.h
sgx/datafiles/: sample_ruleset_v1.0.json  sample_ruleset_v1_enc.json
sgx/logs/: output_r0_d1_m9d21y2023_h23m51s29.txt  output_r0_d1_m9d26y2023_h23m6s58.txt
